--- a/LINKTREE CC/sass/index.scss
+++ b/LINKTREE CC/sass/index.scss
@@ -10,121 +10,212 @@ $c-sec: black;
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 1920px) {
-    .container {
-        height: 100vh;
-        width: 100%;
-        background-color: #292929;
-        font-family: $font;
+@media screen and (max-width: 1366px) {
+    .tudo {
         display: flex;
         flex-direction: row;
         align-items: center;
-        #side {
+        justify-content: center;
+        #esq {
+            height: 100vh;
+            background-color: #191919;
+            width: 50%;
+            color: white;
+            font-family: $font;
             #img {
-                padding-top: 6.6rem;
+                margin: auto;
+                text-align: center;
+                padding: 2rem 0rem 2rem 0rem;
                 img {
                     border-radius: 100px;
-                    margin-bottom: 2.5rem;
+                }
+                p {
+                    padding-top: 1rem;
                 }
             }
+    
             #msg {
                 width: 90%;
                 margin: auto;
+                text-align: center;
+                font-size: 15px;
+                padding-bottom: 1rem;
             }
-            margin: auto;
-            text-align: center;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            color: $c-pry;
-            background-color: #414141;
-            width: 25%;
     
             #redes {
-                margin: auto;
-                width: 90%;
-                height: 50%;
                 a {
                     text-decoration: none;
-                    color: $c-pry;
-                    font-weight: bold;
-                    margin: 1rem;
+                    width: 100%;
+                    margin: auto;
+                    text-align: center;
                     p {
-                        border: 2px solid #fff;
-                        padding: 1rem;
-                        background-color: rgb(114, 114, 114);
+                        padding: 1.5rem;
+                        margin: 1rem;
+                        font-weight: bold;
+                        border: 2px solid grey;
+                        color: white;
                         transition: 0.3s;
                         &:hover {
                             transform: scale(1.05);
+                            color: grey;
                         }
                     }
                 }
             }
         }
-    
-        #consultores {
-            position: fixed;
-            left: 385px;
-            top: 150px;
+        #dir {
             width: 100%;
-            h2 {
-                position: absolute;
-                bottom: 500px;
-                left: 285px;
-                color: white;
+            height: 100vh;
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/logo-loja.jpg);
+            background-size: cover;
+            #txt {
                 margin: auto;
                 text-align: center;
-                font-size: 55px;
+                color: white;
+                font-family: $font;
+                padding-top: 2rem;
             }
     
             #cards {
                 display: flex;
                 flex-direction: row;
-                align-items: center;
-                justify-content: space-evenly;
-                width: 85%;
+                flex-wrap: wrap;
+                justify-content: center;
+                padding: 1rem;
+                width: 100%;
                 #card {
-                    background-color: #191919;
-                    padding: 5rem;
+                    border: 1px solid white;
+                    padding: 3rem;
                     margin: 1rem;
-                    width: 15%;
-                    border-radius: 55px;
-                    transition: 0.2s;
+                    border-radius: 50px;
+                    text-align: center;
+                    width: 25%;
+                    /* From https://css.glass */
+                    background: rgba(78, 78, 78, 0.35);
+                    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                    backdrop-filter: blur(8.9px);
+                    -webkit-backdrop-filter: blur(8.9px);
+                    border: 1px solid rgba(255, 255, 255, 0.3);
+                    transition: 0.3s;
                     &:hover {
                         transform: scale(1.05);
-                    }
-                    p {
-                        text-align: center;
+                        background-color: #006aed21;
                     }
                     a {
                         text-decoration: none;
-                        color: white;
+                        p {
+                            color: white;
+                            font-family: $font;
+                        }
                     }
                 }
             }
         }
-    
-        #footer {
-            position: fixed;
-            left:1055px;
-            bottom: 51px;
+    }
+}
+
+@media screen and (max-width: 1920px) {
+    .tudo {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        #esq {
+            height: 100vh;
+            background-color: #191919;
             width: 50%;
-            display: flex;
-            flex-direction: row;
-            a {
-                width: 100%;
-                text-decoration: none;
-                #sac {
-                    width: 300px;
+            color: white;
+            font-family: $font;
+            #img {
+                margin: auto;
+                text-align: center;
+                padding: 10rem 0rem 2rem 0rem;
+                img {
+                    border-radius:500px;
+                    width: 250px;
+                }
+                p {
+                    padding-top: 1rem;
+                    font-size: 25px;
+                }
+            }
+    
+            #msg {
+                width: 90%;
+                margin: auto;
+                text-align: center;
+                font-size: 15px;
+                padding-top: 2.5rem;
+                padding-bottom: 2.5rem;
+            }
+    
+            #redes {
+                a {
                     text-decoration: none;
-                    color: white;
+                    width: 100%;
+                    margin: auto;
                     text-align: center;
-                    border: 2px solid white;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-around;
-                    padding: 1rem;
+                    p {
+                        padding: 1.5rem;
+                        margin: 1rem 2rem 2rem 2rem;
+                        font-weight: bold;
+                        border: 2px solid grey;
+                        color: white;
+                        transition: 0.3s;
+                        &:hover {
+                            transform: scale(1.05);
+                            color: grey;
+                        }
+                    }
+                }
+            }
+        }
+        #dir {
+            width: 100%;
+            height: 100vh;
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/logo-loja.jpg);
+            background-size: cover;
+            #txt {
+                margin: auto;
+                text-align: center;
+                color: white;
+                font-family: $font;
+                padding-top: 5.5rem;
+                font-size: 30px;
+            }
+    
+            #cards {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                padding:5rem 2rem 3rem 2rem;
+                width: 100%;
+                #card {
+                    border: 1px solid white;
+                    padding: 3rem;
+                    margin: 1rem 2rem 2rem 1.8rem;
+                    border-radius: 50px;
+                    text-align: center;
+                    width: 45%;
+                    /* From https://css.glass */
+                    background: rgba(78, 78, 78, 0.35);
+                    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+                    backdrop-filter: blur(8.9px);
+                    -webkit-backdrop-filter: blur(8.9px);
+                    border: 1px solid rgba(255, 255, 255, 0.3);
+                    transition: 0.3s;
+                    &:hover {
+                        transform: scale(1.05);
+                        background-color: #006aed21;
+                    }
+                    a {
+                        text-decoration: none;
+                        p {
+                            color: white;
+                            font-family: $font;
+                        }
+                    }
                 }
             }
         }
