--- a/LINKTREE CC/sass/index.css
+++ b/LINKTREE CC/sass/index.css
@@ -5,104 +5,6 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 1366px) {
-  .tudo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  .tudo #esq {
-    height: 100vh;
-    background-color: #191919;
-    width: 50%;
-    color: white;
-    font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
-  }
-  .tudo #esq #img {
-    margin: auto;
-    text-align: center;
-    padding: 2rem 0rem 2rem 0rem;
-  }
-  .tudo #esq #img img {
-    border-radius: 100px;
-  }
-  .tudo #esq #img p {
-    padding-top: 1rem;
-  }
-  .tudo #esq #msg {
-    width: 90%;
-    margin: auto;
-    text-align: center;
-    font-size: 15px;
-    padding-bottom: 1rem;
-  }
-  .tudo #esq #redes a {
-    text-decoration: none;
-    width: 100%;
-    margin: auto;
-    text-align: center;
-  }
-  .tudo #esq #redes a p {
-    padding: 1.5rem;
-    margin: 1rem;
-    font-weight: bold;
-    border: 2px solid grey;
-    color: white;
-    transition: 0.3s;
-  }
-  .tudo #esq #redes a p:hover {
-    transform: scale(1.05);
-    color: grey;
-  }
-  .tudo #dir {
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/logo-loja.jpg);
-    background-size: cover;
-  }
-  .tudo #dir #txt {
-    margin: auto;
-    text-align: center;
-    color: white;
-    font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
-    padding-top: 2rem;
-  }
-  .tudo #dir #cards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 1rem;
-    width: 100%;
-  }
-  .tudo #dir #cards #card {
-    border: 1px solid white;
-    padding: 3rem;
-    margin: 1rem;
-    border-radius: 50px;
-    text-align: center;
-    width: 25%;
-    /* From https://css.glass */
-    background: rgba(78, 78, 78, 0.35);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8.9px);
-    -webkit-backdrop-filter: blur(8.9px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    transition: 0.3s;
-  }
-  .tudo #dir #cards #card:hover {
-    transform: scale(1.05);
-    background-color: rgba(0, 106, 237, 0.1294117647);
-  }
-  .tudo #dir #cards #card a {
-    text-decoration: none;
-  }
-  .tudo #dir #cards #card a p {
-    color: white;
-    font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
-  }
-}
 @media screen and (max-width: 1920px) {
   .tudo {
     display: flex;
@@ -117,10 +19,13 @@
     color: white;
     font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
   }
+  .tudo #esq #arrow {
+    display: none;
+  }
   .tudo #esq #img {
     margin: auto;
     text-align: center;
-    padding: 10rem 0rem 2rem 0rem;
+    padding: 5rem 0rem 2rem 0rem;
   }
   .tudo #esq #img img {
     border-radius: 500px;
@@ -167,7 +72,8 @@
     text-align: center;
     color: white;
     font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
-    padding-top: 5.5rem;
+    padding-top: 3rem;
+    filter: drop-shadow(1px 2px 25px black);
     font-size: 30px;
   }
   .tudo #dir #cards {
@@ -181,10 +87,10 @@
   .tudo #dir #cards #card {
     border: 1px solid white;
     padding: 3rem;
-    margin: 1rem 2rem 2rem 1.8rem;
+    margin: 0rem 2rem 2rem 1.8rem;
     border-radius: 50px;
     text-align: center;
-    width: 45%;
+    width: 35%;
     /* From https://css.glass */
     background: rgba(78, 78, 78, 0.35);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -203,5 +109,153 @@
   .tudo #dir #cards #card a p {
     color: white;
     font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
+  }
+}
+@media screen and (max-width: 1366px) {
+  .tudo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .tudo #esq {
+    height: 100vh;
+    background-color: #191919;
+    width: 50%;
+    color: white;
+    font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
+  }
+  .tudo #esq #arrow {
+    display: none;
+  }
+  .tudo #esq #img {
+    margin: auto;
+    text-align: center;
+    padding: 5rem 0rem 2rem 0rem;
+  }
+  .tudo #esq #img img {
+    border-radius: 500px;
+    width: 150px;
+  }
+  .tudo #esq #img p {
+    padding-top: 1rem;
+  }
+  .tudo #esq #msg {
+    width: 90%;
+    margin: auto;
+    text-align: center;
+    font-size: 15px;
+    padding-bottom: 1rem;
+  }
+  .tudo #esq #redes a {
+    text-decoration: none;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+  }
+  .tudo #esq #redes a p {
+    padding: 1.5rem;
+    margin: 1rem;
+    font-weight: bold;
+    border: 2px solid grey;
+    color: white;
+    transition: 0.3s;
+  }
+  .tudo #esq #redes a p:hover {
+    transform: scale(1.05);
+    color: grey;
+  }
+  .tudo #dir {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/logo-loja.jpg);
+    background-size: cover;
+  }
+  .tudo #dir #txt {
+    margin: auto;
+    text-align: center;
+    color: white;
+    font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
+    padding-top: 4rem 1rem 4rem 1rem;
+  }
+  .tudo #dir #txt h1 {
+    font-size: 45px;
+  }
+  .tudo #dir #cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1rem;
+    width: 100%;
+  }
+  .tudo #dir #cards #card {
+    border: 1px solid white;
+    padding: 3rem;
+    margin: 1rem;
+    border-radius: 50px;
+    text-align: center;
+    width: 25%;
+    /* From https://css.glass */
+    background: rgba(78, 78, 78, 0.35);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.9px);
+    -webkit-backdrop-filter: blur(8.9px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    transition: 0.3s;
+  }
+  .tudo #dir #cards #card:hover {
+    transform: scale(1.05);
+    background-color: rgba(0, 106, 237, 0.1294117647);
+  }
+  .tudo #dir #cards #card a {
+    text-decoration: none;
+  }
+  .tudo #dir #cards #card a p {
+    color: white;
+    font-family: "Montserrat", "Poppins", "Oswald", Tahoma, Verdana;
+  }
+}
+@media screen and (max-width: 414px) {
+  .tudo {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+  }
+  .tudo #esq {
+    width: 100%;
+  }
+  .tudo #esq #arrow {
+    display: grid;
+    place-items: center;
+  }
+  .tudo #esq #arrow img {
+    padding-top: 2rem;
+    width: 100px;
+  }
+  .tudo #esq #img {
+    padding-top: 7.5rem;
+  }
+  .tudo #dir {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  .tudo #dir #txt h1 {
+    font-size: 30px;
+  }
+  .tudo #dir #cards {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+  }
+  .tudo #dir #cards #card {
+    width: 100%;
+    padding: 2rem;
+    margin: 1rem 0 1rem 0;
   }
 }/*# sourceMappingURL=index.css.map */
